# gobazel

./: .bazelrc  .gitignore  BUILD  BUILD.bazel  Gopkg.toml  LICENSE  Makefile  README.md  WORKSPACE  bazelcmd  docker-compose.yml  test.txt
.kube/: README.md  ca.crt  client.crt  client.key  config
builder/: Dockerfile  README.md  addpass.sh  config.json  env.sh  initpass.sh  runbazel.sh
commander/: BUILD.bazel  main.go
commander/cmd/: BUILD.bazel  root.go
common/: BUILD.bazel  types.go
dashboard/: BUILD.bazel  README.md  config.yaml  dashboard.yaml  main.go
dashboard/cmd/: BUILD.bazel  create.go  root.go
dashboard/dashboards/: greeting.json  node-exporter-single-server.json  service1.json  test.json  traefik-dashboard.1.json  traefik-dashboard.json
deploy/: BUILD.bazel  README.md  gobazel-namespace.yaml  gobazel-services.yml  gobazel.yml  grafana-values.yaml  ingress-pod.yaml  ingress-pod.yml  ingress-rbac.yaml  ingress-ui.yaml  ingress-ui.yml  monitoring-ingress.yaml  monitoring-ingress.yml  monitoring.yaml  namespace.yml  prometheus-config.yml  prometheus-values.yaml  prometheus.yml  registry.yaml  service1.yml  service2.yaml  services.yaml
deploy/addons/: BUILD.bazel  grafana-values.yaml  logging-config.yaml  logging-daemonset.yaml  logging-role-binding.yaml  metrics.yaml  nats-deploy.yaml  nats-prereqs.yaml  prometheus-values.yaml  tracing.yaml
deploy/dev/: BUILD.bazel  eventtest.yaml  greet.yaml  greeting.yaml  launcher.yaml  service1.yaml  service2.yaml
deploy/local/: BUILD.bazel  ingress-pod.yaml  ingress-rbac.yaml  ingress-ui.yaml  registry.yaml  traefik-values.yaml
eventtest/: BUILD.bazel  README.md  handlers.go  handlers_test.go  main.go  nats.go
greet/: BUILD.bazel  greetingtransport.go  main.go
greeting/: BUILD.bazel  greeting.go  greeting_test.go  main.go
kube/: ca.crt  client.crt  client.key  config
launcher/: BUILD.bazel  README.md  main.go
protos/: BUILD.bazel  README.md  greeting.pb.go  greeting.proto  launcher.proto
protos-src/: BUILD.bazel
scripts/: kubectl-config.sh
service1/: BUILD.bazel  greeting.go  greeting_test.go  main.go
service2/: BUILD.bazel  README.md  main.go
testdata/: targets.txt
