load("@io_bazel_rules_go//go:def.bzl", "gazelle")

gazelle(
    name = "gazelle",
    command = "fix",
    external = "vendored",
    prefix = "github.com/margic/gobazel",
)

# filegroup to allow build of all services in one go
filegroup(
    name = "services",
    srcs = [
        "//service1:go_default_library",
        "//service1:service1-image",
        "//service2:go_default_library",
        "//service2:service2-image"
    ],
    visibility = ["//visibility:public"],
)

# filegroup to push all images
filegroup(
    name = "push",
    srcs = [
        "//service1:push-service1-image",
        "//service2:push-service2-image"
    ],
)