load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/margic/gobazel/commander",
    visibility = ["//visibility:private"],
    deps = [
        "//commander/cmd:go_default_library",
        "//vendor/github.com/spf13/pflag:go_default_library",
        "//vendor/github.com/spf13/viper:go_default_library",
    ],
)

go_binary(
    name = "commander",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
