load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/margic/gobazel/dashboard",
    visibility = ["//visibility:private"],
    deps = ["//dashboard/cmd:go_default_library"],
)

go_binary(
    name = "dashboard",
    embed = [":go_default_library"],
    importpath = "github.com/margic/gobazel/dashboard",
    visibility = ["//visibility:public"],
)

load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")
# create a tar with the dashboards files in it
pkg_tar(
    name = "dashboards-tar",
    srcs = glob(["dashboards/**"]),
    mode = "0644",
    package_dir = "app/dashboards",
)
# create tar with config file
pkg_tar(
    name = "config-tar",
    srcs = glob(["config.yaml"]),
    mode = "0644",
    package_dir = "app"
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

container_image(
    name = "dashboard-base-image",
    base = "@go_image_base//image",
    tars = [":config-tar", "dashboards-tar"],
)

go_image(
    name = "dashboard-image",
    binary = ":dashboard",
    base = "dashboard-base-image",
    visibility = ["//visibility:public"],
)
