load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "handlers.go",
        "main.go",
    ],
    importpath = "github.com/margic/gobazel/eventtest",
    visibility = ["//visibility:private"],
    deps = [
        "//vendor/github.com/gorilla/mux:go_default_library",
        "//vendor/github.com/spf13/pflag:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
    ],
)

go_binary(
    name = "eventtest",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_image(
    name = "eventtest-image",
    binary = ":eventtest",
    visibility = ["//visibility:public"],
)

load("@io_bazel_rules_docker//container:container.bzl", "container_push")

container_push(
    name = "push-eventtest-image",
    format = "Docker",
    image = ":eventtest-image",
    registry = "localhost:5000",
    repository = "gobazel-eventtest",
    tag = "dev",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["handlers_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
    ],
)
