load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_image(
    name = "greet-image",
    binary = ":greet",
    visibility = ["//visibility:public"],
)

load("@io_bazel_rules_docker//container:container.bzl", "container_push")

container_push(
    name = "push-greet-image",
    format = "Docker",
    image = ":greet-image",
    registry = "localhost:5000",
    repository = "gobazel-greet",
    tag = "dev",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "greet",
    embed = [":go_default_library"],
    importpath = "github.com/margic/gobazel/greet",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = [
        "greetingtransport.go",
        "main.go",
    ],
    importpath = "github.com/margic/gobazel/greet",
    visibility = ["//visibility:private"],
    deps = [
        "//protos:go_default_library",
        "//vendor/github.com/go-kit/kit/endpoint:go_default_library",
        "//vendor/github.com/go-kit/kit/transport/grpc:go_default_library",
        "//vendor/github.com/go-kit/kit/transport/http:go_default_library",
        "//vendor/github.com/spf13/pflag:go_default_library",
        "//vendor/google.golang.org/grpc:go_default_library",
    ],
)
