load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "protos_proto",
    srcs = ["greeting.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "protos_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/margic/gobazel/protos",
    proto = ":protos_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":protos_go_proto"],
    importpath = "github.com/margic/gobazel/protos",
    visibility = ["//visibility:public"],
)
