load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "service1-test",
    srcs = ["greeting_test.go"],
    importpath = "github.com/margic/gobazel/service1",
    library = ":go_default_library",
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")
go_image(
    name = "service1-image",
    srcs = [
        "main.go",
    ],
    importpath = "github.com/margic/gobazel/service1",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/spf13/viper:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
    ],
)

load("@io_bazel_rules_docker//container:container.bzl", "container_push")
container_push(
   name = "push-service1-image",
   image = ":service1-image",
   format = "Docker",
   registry = "index.docker.io",
   repository = "pcrofts/gobazel-service1",
   tag = "dev",
   visibility = ["//visibility:public"],
)
