load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_image(
    name = "service2-image",
    binary = ":service2",
    visibility = ["//visibility:public"],
)

load("@io_bazel_rules_docker//container:container.bzl", "container_push")

container_push(
    name = "push-service2-image",
    format = "Docker",
    image = ":service2-image",
    registry = "localhost:5000",
    repository = "gobazel-service2",
    tag = "dev",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "service2",
    embed = [":go_default_library"],
    importpath = "github.com/margic/gobazel/service2",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/margic/gobazel/service2",
    visibility = ["//visibility:private"],
    deps = [
        "//vendor/github.com/go-kit/kit/endpoint:go_default_library",
        "//vendor/github.com/go-kit/kit/transport/http:go_default_library",
    ],
)
