load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["root.go"],
    importpath = "github.com/margic/gobazel/commander/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/mitchellh/go-homedir:go_default_library",
        "//vendor/github.com/spf13/cobra:go_default_library",
        "//vendor/github.com/spf13/viper:go_default_library",
    ],
)
