load("@k8s_deploy//:defaults.bzl", "k8s_deploy")
load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

k8s_deploy(
  name = "deploy-metrics",
  template = ":metrics.yaml",
)

k8s_deploy(
  name = "deploy-tracing",
  template = ":tracing.yaml",
)

k8s_objects(
   name = "apply-tracing",
   objects = [
    ":deploy-tracing.apply",
   ]
)
k8s_objects(
   name = "delete-tracing",
   objects = [
    ":deploy-tracing.delete",
   ]
)

k8s_objects(
   name = "apply-metrics",
   objects = [
    ":deploy-metrics.apply",
   ]
)
k8s_objects(
   name = "delete-metrics",
   objects = [
    ":deploy-metrics.delete",
   ]
)

