load("@k8s_deploy//:defaults.bzl", "k8s_deploy")
load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

k8s_deploy(
    name = "deploy-metrics",
    template = ":metrics.yaml",
)

k8s_deploy(
    name = "deploy-tracing",
    template = ":tracing.yaml",
)

k8s_deploy(
    name = "deploy-logging-namespace",
    template = ":logging-namespace.yaml",
)

k8s_deploy(
    name = "deploy-logging-account",
    template = ":logging-account.yaml",
)

k8s_deploy(
    name = "deploy-logging-role",
    template = ":logging-role.yaml",
)

k8s_deploy(
    name = "deploy-logging-role-binding",
    template = ":logging-role-binding.yaml",
)

k8s_deploy(
    name = "deploy-logging-config",
    template = ":logging-config.yaml",
)

k8s_deploy(
    name = "deploy-logging-daemonset",
    template = ":logging-daemonset.yaml",
)

k8s_objects(
    name = "deployLogging",
    objects = [
        ":deploy-logging-account.apply",
        ":deploy-logging-role.apply",
        ":deploy-logging-role-binding.apply",
        ":deploy-logging-config.apply",
        ":deploy-logging-daemonset.apply",
    ],
)

k8s_objects(
    name = "deleteLogging",
    objects = [
        ":deploy-logging-daemonset.delete",
        ":deploy-logging-config.delete",
        ":deploy-logging-role-binding.delete",
        ":deploy-logging-role.delete",
        ":deploy-logging-account.delete",
    ],
)

k8s_deploy(
    name = "deploy-nats-prereqs",
    template = ":nats-prereqs.yaml",
)

k8s_deploy(
    name = "deploy-nats",
    template = ":nats-deploy.yaml",
)

k8s_objects(
    name = "deployNats",
    objects = [
        ":deploy-nats-prereqs.apply",
        ":deploy-nats.apply",
    ],
)

k8s_objects(
    name = "deleteNats",
    objects = [
        ":deploy-nats.delete",
        ":deploy-nats-prereqs.delete",
    ],
)
