load("@k8s_deploy//:defaults.bzl", "k8s_deploy")
load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

k8s_deploy(
  name = "deploy-greeting",
  template = ":greeting.yaml",
  images = {
    "localhost:5000/gobazel-greeting:dev": "//greeting:greeting-image"
  },
)

k8s_deploy(
  name = "deploy-greet",
  template = ":greet.yaml",
  images = {
    "localhost:5000/gobazel-greet:dev": "//greet:greet-image"
  },
)
