load("@k8s_deploy//:defaults.bzl", "k8s_deploy")
load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

k8s_deploy(
    name = "deploy-greeting",
    images = {
        "localhost:5000/gobazel-greeting:dev": "//greeting:greeting-image",
    },
    template = ":greeting.yaml",
)

k8s_deploy(
    name = "deploy-greet",
    images = {
        "localhost:5000/gobazel-greet:dev": "//greet:greet-image",
    },
    template = ":greet.yaml",
)
