load("@k8s_deploy//:defaults.bzl", "k8s_deploy")
load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

k8s_deploy(
    name = "deploy-ingress-rbac",
    namespace = "gobazel",
    template = ":ingress-rbac.yaml",
)

k8s_deploy(
    name = "deploy-ingress-pod",
    namespace = "gobazel",
    template = ":ingress-pod.yaml",
)

k8s_deploy(
    name = "deploy-ingress-ui",
    namespace = "gobazel",
    template = ":ingress-ui.yaml",
)

k8s_deploy(
    name = "deploy-namespace",
    namespace = "default",
    template = ":namespace.yaml",
)

k8s_deploy(
    name = "deploy-registry",
    namespace = "gobazel",
    template = ":registry.yaml",
)

k8s_deploy(
    name = "deploy-bazel-cache",
    namespace = "gobazel",
    template = ":bazel-cache.yaml",
)

k8s_objects(
    name = "create",
    objects = [
        ":deploy-namespace.apply",
        ":deploy-ingress-rbac.apply",
        ":deploy-ingress-pod.apply",
        ":deploy-ingress-ui.apply",
        ":deploy-registry.apply",
    ],
)

k8s_objects(
    name = "delete",
    objects = [
        ":deploy-namespace.delete",
    ],
)
